--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ src/libnma/NMA-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
 src/libnma/nma-version.h
+src/libnma/tests/mobile-wizard
+src/libnma/tests/run-vpn
+src/libnma/tests/vpn-password-dialog
+src/libnma/tests/wifi-dialog
 src/libnm-gtk/libnm-gtk.pc
 src/libnm-gtk/NMGtk-1.0.gir
 src/libnm-gtk/NMGtk-1.0.typelib
